<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rota App1</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings_screen">Settings</string>
    <string name="title_activity_notification_screen">Notification</string>
    <string name="notification_when">When it is near of:</string>
    <string name="place_lat_long">Place with positions:</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="distance_hint">Ex.: 5 m distance</string>
    <string name="lat_hint">Your latitude, ex.: -3,2731649</string>
    <string name="long_hint">Your longitude, ex.: -60,6458105</string>
    <string name="save_notification">Save notification</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="near_destiny">Hey, you are near of your destiny</string>
    <string name="button_speak">Speak location</string>
    <string name="title_activity_add_favorite_screen">AddFavoriteScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_visualize_favorite_screen">VisualizeFavoriteScreen</string>
    <string name="favorite_label_place">Whats the name of this place?</string>
    <string name="favorite_hint_place_name">Ex.: My home</string>
    <string name="favorite_add_location">Add favorite</string>
    <string name="favorite_bt_manager">Favorites</string>
    <string name="title_activity_favorite_manager">FavoriteManager</string>
    <string name="favorites_visualize">Visualize favorite</string>
    <string name="title_activity_favorite_details_screen">FavoriteDetailsScreen</string>
    <string name="favorite_detail_description_label">Description</string>
    <string name="favorite_detail_bt_voltar">Back</string>
    <string name="title_activity_edit_favorite_screen">EditFavoriteScreen</string>
    <string name="favorite_edit_favorite">Edit favorite</string>
    <string name="place_edit_lat_long">Edit coordinates:</string>
    <string name="favorite_edit_bt_save_changes">Save changes</string>
    <string name="title_activity_favorite_map_screen">FavoriteMapScreen</string>
    <string name="favorite_goto_location">Go to my favorite</string>
    <string name="favorite_notify">Notify me when it is near</string>
    <string name="title_activity_zteste_empty">ZtesteEmptyActivity</string>
    <string name="title_activity_near_and_far_location_screen">NearAndFarLocationScreen</string>

    <string name="json_file_run_sucess">Done</string>
	<string name="json_show_near_location">Show near location</string>
	<string name="json_show_far_location">Show far location</string>
    <string name="json_bt_manager_run">Run Json</string>
    <string name="json_radius_distance">Radius distance</string>
    
</resources>
