<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvInitialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_when"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/etRaio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distance_hint"
        android:inputType="phone" >

        <requestFocus />
    </EditText>
    
   <TextView
        android:id="@+id/tvPlaceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_lat_long"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lat_hint"
        android:inputType="phone" >

        <requestFocus />
    </EditText>
    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
    	android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    
        <EditText
        android:id="@+id/etLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/long_hint"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

        <Button 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btSaveNotification"
            android:text="@string/save_notification"
            android:layout_marginTop="20dp"
            />
</LinearLayout>