<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgblack"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="50dp"
        >

    <ImageView
            android:id="@+id/imageFavoriteDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/favorite_bt_manager"
            android:src="@drawable/favorite_ico" />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/tvDescriptionDetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_detail_description_label" />

    <TextView
        android:id="@+id/tvDescriptionDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvLatitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/tvLatitudeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />   
        
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvLongitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/tvLongitudeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/btGoToFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_goto_location" />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btNotifyMeFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_notify" />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btFavoriteDetailVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_detail_bt_voltar" />
    
</LinearLayout>