<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<TextView
        android:id="@+id/tvInitialTextUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_edit_favorite"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/etEditFavoriteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences" >

        <requestFocus />
    </EditText>
    
   <TextView
        android:id="@+id/tvEditPlaceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_edit_lat_long"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etEditFavoriteLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" >

    </EditText>
    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
    	android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
        <EditText
        android:id="@+id/etEditFavoriteLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" >

    </EditText>

    <Button 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btEditFavoriteSave"
            android:text="@string/favorite_edit_bt_save_changes"
            android:layout_marginTop="20dp"
            />
</LinearLayout>